# Thunder_Wings

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h.in  icon.rc
.github/workflows/: build.yml
debian/: changelog  control  copyright  postinst  prerm  rules  thunder-wings.desktop
include/Core/: Constants.hpp  ISerializable.hpp  Logging.hpp  Macros.h  Macros.hpp  Math.hpp  RandomUtils.hpp  ResourceManager.hpp  Timer.hpp
include/Entities/: Bullet.hpp  Enemy.hpp  Entity.hpp  Gift.hpp  Player.hpp
include/Game/: Game.hpp  Menu.hpp
include/Platform/: save_path.h
src/: main.cpp
src/Core/: Logging.cpp  RandomUtils.cpp  ResourceManager.cpp  Timer.cpp
src/Entities/: Bullet.cpp  Enemy.cpp  Entity.cpp  Gift.cpp  Player.cpp
src/Game/: Game.cpp  Menu.cpp
src/Platform/: save_path.c
